--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,10 @@
-deploy.ant.properties.file=/Users/arthurfernandes/Library/Application Support/NetBeans/8.0/tomcat80.properties
-j2ee.server.domain=/Users/arthurfernandes/Library/Application Support/NetBeans/8.0/apache-tomcat-8.0.3.0_base
-j2ee.server.home=/Applications/NetBeans/apache-tomcat-8.0.3
-j2ee.server.instance=tomcat80:home=/Applications/NetBeans/apache-tomcat-8.0.3:base=apache-tomcat-8.0.3.0_base
+deploy.ant.properties.file=/home/vbramigk/.netbeans/8.0.2/config/GlassFishEE6/Properties/gfv31732465067.properties
+j2ee.platform.is.jsr109=true
+j2ee.server.domain=/home/vbramigk/.netbeans/8.0.2/config/GF_4.1_15/domain1
+j2ee.server.home=/usr/local/glassfish-4.1/glassfish
+j2ee.server.instance=[/usr/local/glassfish-4.1/glassfish:/usr/local/glassfish-4.1/glassfish/domains/domain1]deployer:gfv3ee6:localhost:4848
+j2ee.server.middleware=/usr/local/glassfish-4.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=/Users/arthurfernandes/Library/Application Support/NetBeans/8.0/build.properties
+user.properties.file=/home/vbramigk/.netbeans/8.0.2/build.properties
